fix bug: long "words" in console output cause horizontal scrollbar and hide error inspector UI

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/console/consoleStyles.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/console/consoleStyles.css
@@ -23,6 +23,7 @@
    outline: none;
    border: none;
    white-space: pre-wrap !important;
+   word-break: break-all;
    margin: 0;
    -webkit-user-select: text;
 }
